<resources>
    <string name="app_name">Project3</string>
    <string name="add_clothes">Add Clothes</string>
    <string name="show_clothes">Show Clothes</string>
    <string name="welcome_to_clothesadvisor">Welcome to ClothesAdvisor!</string>
    <string name="add_your_piece_of_clothing">Add your piece of clothing!</string>
    <string name="t_shirt">T-Shirt</string>
    <string name="hoodie">Hoodie</string>
    <string name="long_sleeves">Long-Sleeves</string>
    <string name="jacket">Jacket</string>
    <string name="type_of_clothing">Type of Clothing</string>
    <string name="coat">Coat</string>
    <string name="shorts">Shorts</string>
    <string name="jeans">Jeans</string>
    <string name="long_pants">Long Pants</string>
    <string name="enter_the_brand">Enter the brand.</string>
    <string name="submit">Submit</string>
    <string name="color_of_clothing">Color of Clothing</string>
    <string name="red">Red</string>
    <string name="Blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="orange2">Orange</string>
    <string name="purple">Purple</string>
    <string name="white">White</string>
    <string name="other">Other</string>
    <string name="done">Done</string>
    <string name="yellow">Yellow</string>
    <string name="long_sleeve_shirt">Long-Sleeve Shirt</string>
    <string name="delete_clothes">Delete Clothes</string>
    <string name="manage_your_clothes">Manage your Clothes</string>
    <string name="add_clothes2">Add Clothes</string>
    <string name="see_your_clothes">See your clothes</string>
    <string name="delete_clothing">Delete Clothing</string>
    <string name="enter_the_id_of_the_clothing_you_would_like_to_delete">Enter the ID# of the Clothing you would like to delete</string>
    <string name="manage_your_clothes2">Manage Your Clothes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parka">Parka</string>
    <string name="no_suitable_clothes">No Suitable Clothes</string>
    <string name="today_you_should_wear">Today you should wear:</string>
    <string name="main_menu">Main Menu</string>
    <string name="manage_clothes">Manage Clothes</string>
    <string name="add_clothes3">Add Clothes</string>
    <string name="upcoming_weather">Upcoming Weather</string>
    <string name="weather_condition">Weather Condition:</string>
    <string name="high_temperature">High Temperature:</string>
    <string name="low_temperature">Low Temperature:</string>
    <string name="day">Day</string>
    <string name="welcome_to_clothesadvisor222">Welcome to ClothesAdvisor!</string>
    <string name="please_enter_your_zip_code">Please Enter your Zip Code.</string>
    <string name="submit111">Submit</string>
</resources>
