<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextView1"
        android:id="@+id/swipe_weather"
        android:textSize="27sp"
        android:text="@string/weather_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/swipe_day"
        android:layout_alignParentStart="true" />

    <TextView
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="33sp"
        android:text="@string/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_day"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="27sp"
        android:text="@string/low_temperature"
        style="@style/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_low"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/swipe_high"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="27sp"
        style="@style/TextView1"
        android:text="@string/high_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swipe_high"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/swipe_weather"
        android:layout_alignParentStart="true" />

</RelativeLayout>