<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_clothes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csc214.project3.ManageClothes">

    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:text="@string/manage_your_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/Butt_manageClothes_seeClothes"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="24dp"
        android:id="@+id/view7" />

    <Button
        android:id="@+id/Butt_manageClothes_addClothes"
        android:text="@string/add_clothes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        style="@style/Button1"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        android:id="@+id/view"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Button1"
        android:id="@+id/Butt_manageClothes_deleteClothing"
        android:text="@string/delete_clothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/ET_manageClothes_delete"
        android:layout_alignStart="@+id/Butt_manageClothes_seeClothes" />

    <Button
        android:id="@+id/Butt_manageClothes_seeClothes"
        android:text="@string/see_your_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button1"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/Butt_manageClothes_addClothes"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@style/EditText1"
        android:hint="@string/enter_the_id_of_the_clothing_you_would_like_to_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/ET_manageClothes_delete"
        android:layout_below="@+id/view7"
        android:layout_alignParentStart="true" />
</RelativeLayout>
